# testing

Tocket/: README.md
Tocket/tocket/: cli.py  constants.py  db.py  github_api.py  utils.py
test/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
