[project]
name = "tocket"
version = "0.1.0"
description = "Tocket - CLI GitHub manager (MVP)"
authors = [
  { name = "neveerlabs", email = "you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"

[project.scripts]
tocket = "tocket.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"